Add and style content

--- a/css/app.css
+++ b/css/app.css
@@ -1,5 +1,25 @@
+@import url(http://fonts.googleapis.com/css?family=Droid+Serif|Oswald);
+
 body{
   background-color:black;
+}
+
+*, h4, h5, h6, p{
+  font-family: 'Droid Serif', sans-serif;
+  color: black;
+}
+
+h1, h2, h3 {
+  font-family: 'Oswald', sans-serif;
+  color: black;
+}
+
+a{
+  color:#ff0000;
+}
+
+button, .button{
+  background-color:#ff0000;
 }
 
 .bold {
@@ -92,5 +112,23 @@ fieldset legend {
 .content{
   width:100vw;
   margin-left:20px;
-  margin-top: 40vh;
+  margin-top: 35vh;
+}
+
+#icons{
+  height:5.5rem;
+  margin-bottom:10px;
+}
+
+#date h2{
+  font-size:2.1rem;
+}
+
+#contact h4{
+  margin-top:-10px;
+  font-size: 1.47rem;
+}
+
+#updates form{
+  margin-top:-10px;
 }
