Make button and anchor hover red

--- a/css/app.css
+++ b/css/app.css
@@ -1,10 +1,10 @@
 @import url(http://fonts.googleapis.com/css?family=Droid+Serif|Oswald);
 
-body{
-  background-color:black;
+body {
+  background-color: black;
 }
 
-*, h4, h5, h6, p{
+*, h4, h5, h6, p {
   font-family: 'Droid Serif', sans-serif;
   color: black;
 }
@@ -14,12 +14,20 @@ h1, h2, h3 {
   color: black;
 }
 
-a{
-  color:#ff0000;
+a {
+  color: red;
 }
 
-button, .button{
-  background-color:#ff0000;
+a:hover {
+  color: #E70000;
+}
+
+button, .button {
+  background-color: red;
+}
+
+button:hover, .button:hover {
+  background-color: #E70000;
 }
 
 .bold {
@@ -95,40 +103,40 @@ fieldset legend {
   height: 2rem;
 }
 
-.container{
-  text-align:center;
-  position:fixed;
-  margin:-20px -40px;
-  top:0;
-  left:0;
-  vertical-align:middle;
+.container {
+  text-align: center;
+  position: fixed;
+  margin: -20px -40px;
+  top: 0;
+  left: 0;
+  vertical-align: middle;
 }
 
-#layer2, #layer1{
-  height:110vh;
-  width:110vw;
+#layer2, #layer1 {
+  height: 110vh;
+  width: 110vw;
 }
 
-.content{
-  width:100vw;
-  margin-left:20px;
-  margin-top: 35vh;
+.content {
+  width: 100vw;
+  margin-left: 20px;
+  margin-top: 30vh;
 }
 
-#icons{
-  height:5.5rem;
-  margin-bottom:10px;
+#icons {
+  height: 5.5rem;
+  margin-bottom: 10px;
 }
 
-#date h2{
-  font-size:2.1rem;
+#date h2 {
+  font-size: 2.1rem;
 }
 
-#contact h4{
-  margin-top:-10px;
+#contact h4 {
+  margin-top: -10px;
   font-size: 1.47rem;
 }
 
-#updates form{
-  margin-top:-10px;
+#updates form {
+  margin-top: -10px;
 }
