--- a/css/app.css
+++ b/css/app.css
@@ -1,5 +1,5 @@
 body {
-  background-color: black;
+  background-color: #DBDBDB;
 }
 
 *, h4, h5, h6, p {
@@ -46,6 +46,10 @@ button:hover, .button:hover {
 
 .black {
   color: black;
+}
+
+.white {
+  color: white;
 }
 
 a.black {
@@ -101,40 +105,26 @@ fieldset legend {
   height: 2rem;
 }
 
-.container {
-  text-align: center;
-  position: fixed;
-  margin: -20px -40px;
-  top: 0;
-  left: 0;
-  vertical-align: middle;
-}
-
-#layer2, #layer1 {
-  height: 110vh;
-  width: 110vw;
-}
-
-.content {
-  width: 100vw;
-  margin-left: 20px;
-  margin-top: 30vh;
-}
-
 #icons {
-  height: 5.5rem;
-  margin-bottom: 10px;
+  margin-top: 2rem;
 }
 
-#date h2 {
-  font-size: 2.1rem;
+#icons img {
+  max-height: 6rem;
 }
 
-#contact h4 {
-  margin-top: -10px;
-  font-size: 1.47rem;
+#logo {
+  margin-top: 3rem;
 }
 
-#updates form {
-  margin-top: -10px;
+#logo img {
+  height: 5rem;
+}
+
+#date {
+  margin-top: 1rem;
+}
+
+#updates {
+  margin-top: 3rem;
 }
