--- a/css/app.css
+++ b/css/app.css
@@ -85,6 +85,10 @@ a.black:hover {
   cursor: pointer;
 }
 
+.cursor-pointer:hover {
+  cursor: pointer;
+}
+
 .underline {
   text-decoration: underline;
 }
