--- a/css/app.css
+++ b/css/app.css
@@ -1,5 +1,6 @@
 body {
-  background-color: #DBDBDB;
+  /*background-color: #DBDBDB;*/
+  background-color: #606060;
 }
 
 *, h4, h5, h6, p {
@@ -12,7 +13,7 @@ h1, h2, h3 {
   color: black;
 }
 
-a {
+a, a:active, a:focus {
   color: red;
 }
 
@@ -109,6 +110,15 @@ fieldset legend {
   height: 2rem;
 }
 
+#layer1, #layer2 {
+  z-index: -10;
+  position: absolute;
+  top: -7rem;
+  left: 0;
+  height: 100vh;
+  width: 100vw;
+}
+
 #icons {
   margin-top: 2rem;
 }
@@ -118,7 +128,7 @@ fieldset legend {
 }
 
 #logo {
-  margin-top: 3rem;
+  margin-top: 0.5rem;
 }
 
 #logo img {
@@ -126,9 +136,66 @@ fieldset legend {
 }
 
 #date {
-  margin-top: 1rem;
+  margin-top: 0rem;
+}
+
+#date h2 {
+  font-size: 1.2rem;
 }
 
 #updates {
+  margin-top: 2rem;
+}
+
+#about {
+  background-color: #231F20;
+  color: white;
+  padding-top: 2rem;
+  padding-bottom: 2rem;
   margin-top: 3rem;
+  border-top: 2px solid red;
+}
+
+#about h1,
+#about h2,
+#about h3,
+#about h4,
+#about h5,
+#about h6,
+#about p {
+  color: white;
+}
+
+@media (min-width: 480px) and (max-width: 600px) {
+  #date h2 {
+    font-size: 1.5rem;
+  }
+}
+
+@media (min-width: 601px) and (max-width: 1024px) {
+  #logo {
+    margin-top: 1.5rem;
+  }
+
+  #date {
+    margin-top: 1rem;
+  }
+
+  #date h2 {
+    font-size: 1.8rem;
+  }
+}
+
+@media (min-width: 1025px) {
+  #logo {
+    margin-top: 2rem;
+  }
+
+  #date {
+    margin-top: 1.5rem;
+  }
+
+  #date h2 {
+    font-size: 2.2rem;
+  }
 }
