--- a/css/app.css
+++ b/css/app.css
@@ -110,10 +110,16 @@ fieldset legend {
   height: 2rem;
 }
 
+#splash {
+  padding-top: 3rem;
+  padding-bottom: 6rem;
+  margin-top: -32px;
+}
+
 #layer1, #layer2 {
   z-index: -10;
   position: absolute;
-  top: -7rem;
+  top: 0;
   left: 0;
   height: 100vh;
   width: 100vw;
@@ -152,8 +158,8 @@ fieldset legend {
   color: white;
   padding-top: 2rem;
   padding-bottom: 2rem;
-  margin-top: 3rem;
   border-top: 2px solid red;
+  border-bottom: 2px solid red;
 }
 
 #about h1,
