--- a/css/application.css
+++ b/css/application.css
@@ -1,334 +1,80 @@
-*, *:after, *:before { -webkit-box-sizing: border-box; -moz-box-sizing: border-box; box-sizing: border-box; }
-body, html { font-size: 100%; padding: 0; margin: 0;}
-
 #application {
   width: 100vw;
   height: 100vh;
   overflow: scroll;
+  background-color: #1C1C1C;
+}
+
+#application .blinds {
   background-color: black;
-}
-
-/* Header Style */
-.main,
-.container > header {
-  margin: 0 auto;
-  padding: 2em;
-}
-
-.container > header {
-  text-align: center;
-  background: rgba(255,255,255,0.07);
-}
-
-.container > header h1 {
-  font-size: 2.625em;
-  line-height: 1.3;
-  margin: 0;
-  font-weight: 300;
-  color: white;
-}
-
-.container > header span {
-  display: block;
-  font-size: 60%;
-  color: white;
-  padding: 0 0 0.6em 0.1em;
-}
-
-/* general style for the form */
-.nl-form {
-  width: 80%;
-  margin: 0.3em auto 0 auto;
-  font-size: 3em;
-  line-height: 1.5;
-  color: white;
-}
-
-.nl-form ul {
-  list-style: none;
-  margin: 0;
-  padding: 0;
-}
-
-/* normalize the input elements, make them look like everything else */
-.nl-form input,
-.nl-form select,
-.nl-form button {
-  border: none;
-  background: transparent;
-  font-family: inherit;
-  font-size: inherit;
-  color: inherit;
-  font-weight: inherit;
-  line-height: inherit;
-  display: inline-block;
-  padding: 0;
-  margin: 0;
-  -webkit-appearance: none;
-  -moz-appearance: none;
-}
-
-.nl-form input:focus {
-  outline: none;
-}
-
-/* custom field (drop-down, text element) styling  */
-.nl-field {
-  display: inline-block;
-  position: relative;
-}
-
-.nl-field.nl-field-open {
-  z-index: 10000;
-}
-
-/* the toggle is the visible part in the form */
-.nl-field-toggle,
-.nl-form input,
-.nl-form select  {
-  line-height: inherit;
-  display: inline-block;
-  color: red;
-  cursor: pointer;
-  height: 4rem;
-  border-bottom: 1px dashed red;
-}
-
-/* drop-down list / text element */
-.nl-field ul {
+  opacity: 0.70;
+  z-index: 5;
+  width: 100vw;
+  height: 100vh;
   position: absolute;
-  visibility: hidden;
-  background: red;
-  left: -0.5em;
-  top: 50%;
-  font-size: 80%;
-  opacity: 0;
-  -webkit-transform: translateY(-40%) scale(0.9);
-  -moz-transform: translateY(-40%) scale(0.9);
-  transform: translateY(-40%) scale(0.9);
-  -webkit-transition: visibility 0s 0.3s, opacity 0.3s, -webkit-transform 0.3s;
-  -moz-transition: visibility 0s 0.3s, opacity 0.3s, -moz-transform 0.3s;
-  transition: visibility 0s 0.3s, opacity 0.3s, transform 0.3s;
-}
-
-.nl-field.nl-field-open ul {
-  visibility: visible;
-  opacity: 1;
-  -webkit-transform: translateY(-50%) scale(1);
-  -moz-transform: translateY(-50%) scale(1);
-  transform: translateY(-50%) scale(1);
-  -webkit-transition: visibility 0s 0s, opacity 0.3s, -webkit-transform 0.3s;
-  -moz-transition: visibility 0s 0s, opacity 0.3s, -moz-transform 0.3s;
-  transition: visibility 0s 0s, opacity 0.3s, transform 0.3s;
-}
-
-.nl-field ul li {
-  color: #fff;
-  position: relative;
-}
-
-.nl-dd ul li {
-  padding: 0 1.5em 0 0.5em;
-  cursor: pointer;
-  white-space: nowrap;
-}
-
-.nl-dd ul li.nl-dd-checked {
-  color: white;
-  font-weight: bold;
-}
-
-.no-touch .nl-dd ul li:hover {
-  background: rgba(0,0,0,0.05);
-}
-
-.no-touch .nl-dd ul li:hover:active {
-  color: white;
-}
-
-.nl-dd ul li.nl-dd-checked:before {
-  font-family: FontAwesome;
-  content: "\f00c";
-  position: absolute;
-  right: 1em;
-  font-size: 50%;
-  line-height: 3;
-}
-
-.nl-ti-text ul {
-  min-width: 8em;
-}
-
-.nl-ti-text ul li.nl-ti-input input {
-  width: 100%;
-  padding: 0.2em 2em 0.2em 0.5em;
-  border-bottom: none;
-  color: white;
-  background: none;
-  height: 100%;
-}
-
-.nl-form .nl-field-go {
-  position: absolute;
+  top: 0;
   right: 0;
-  top: 0;
-  height: 100%;
-  cursor: pointer;
-  background: rgba(0,0,0,0.1);
-  width: 1.8em;
-  text-align: center;
-  color: transparent;
+  display: none;
 }
 
-.nl-field-go:before {
-  font-family: FontAwesome;
-  content: "\f061";
-  font-size: 75%;
-  color: #fff;
-  width: 100%;
-  line-height: 2.5;
-  display: block;
+#application input::selection {
+  background: #404040;
 }
 
-/* custom placeholder color */
-input::-webkit-input-placeholder {
-  color: rgba(0,0,0,0.4);
-}
-
-input:active::-webkit-input-placeholder ,
-input:focus::-webkit-input-placeholder {
-  color: rgba(0,0,0,0.2);
-}
-
-input::-moz-placeholder {
-  color: rgba(0,0,0,0.4);
-}
-
-input:active::-moz-placeholder,
-input:focus::-moz-placeholder {
-  color: rgba(0,0,0,0.2);
-}
-
-input:-ms-input-placeholder {
-  color: rgba(0,0,0,0.4);
-}
-
-input:active::-ms-input-placeholder ,
-input:focus::-ms-input-placeholder {
-  color: rgba(0,0,0,0.2);
-}
-
-textarea::-webkit-input-placeholder {
-  color: rgba(0,0,0,0.4);
-}
-
-textarea:active::-webkit-input-placeholder ,
-textarea:focus::-webkit-input-placeholder {
-  color: rgba(0,0,0,0.2);
-}
-
-textarea::-moz-placeholder {
-  color: rgba(0,0,0,0.4);
-}
-
-textarea:active::-moz-placeholder,
-textarea:focus::-moz-placeholder {
-  color: rgba(0,0,0,0.2);
-}
-
-textarea:-ms-input-placeholder {
-  color: rgba(0,0,0,0.4);
-}
-
-textarea:active::-ms-input-placeholder ,
-textarea:focus::-ms-input-placeholder {
-  color: rgba(0,0,0,0.2);
-}
-
-/* example field below text input */
-.nl-ti-text ul li.nl-ti-example {
-  font-size: 40%;
-  font-style: italic;
-  font-weight: 400;
-  padding: 0.4em 1em;
-  color: rgba(0,0,0,0.2);
-  border-top: 1px dashed rgba(255,255,255,0.7);
-}
-
-.nl-ti-text ul li.nl-ti-example em {
-  color: #fff
-}
-
-/* submit button */
-.nl-submit-wrap {
-  margin-top: 0.4em;
-}
-
-.nl-form .nl-submit {
-  line-height: 3;
-  text-transform: uppercase;
-  cursor: pointer;
-  position: relative;
+#application::-moz-selection {
   background: red;
-  color: #fff;
-  padding: 0 1em 0 0;
-  font-size: 40%;
-  font-family: 'Oswald';
 }
 
-.nl-submit:before {
-  font-family: FontAwesome;
-  content: "\f14a";
-  color: #fff;
-  float: left;
-  padding: 0 0.7em;
-  margin: 0 0.8em 0 0;
-  background: rgba(0, 0, 0, 0.10);
+#application header {
+  background: rgba(0, 0, 0, 0.2);
+  text-align: center;
+  padding: 1rem;
 }
 
-.no-touch .nl-form .nl-submit:hover,
-.no-touch .nl-form .nl-submit:active {
-  background: #D50000;
+#application header h1 {
+  color: white;
+  font-size: 1.5rem;
 }
 
-.no-touch .nl-form .nl-submit:hover:before {
-  background: rgba(0, 0, 0, 0.10);
+#application article {
+  width: 90vw;
+  margin: auto;
+  font-size: 1.75rem;
+  color: white;
+  padding: 1rem 0 1rem 0;
 }
 
-/* overlay becomes visible when a field is opened */
-.nl-overlay {
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background: rgba(0,0,0,0.5);
-  opacity: 0;
-  z-index: 9999;
-  visibility: hidden;
-  -webkit-transition: visibility 0s 0.3s, opacity 0.3s;
-  -moz-transition: visibility 0s 0.3s, opacity 0.3s;
-  transition: visibility 0s 0.3s, opacity 0.3s;
+#application article span {
+  color: red;
+  border-bottom: 1px dashed red;
+  cursor: pointer;
 }
 
-.nl-field.nl-field-open ~ .nl-overlay {
-  opacity: 1;
-  visibility: visible;
-  -webkit-transition-delay: 0s;
-  -moz-transition-delay: 0s;
-  transition-delay: 0s;
+#application article .text input,
+#application article .input.select select {
+  z-index: 10;
+  background-color: red;
+  color: white;
+  border: none;
+  position: absolute;
+  font-size: 1.75rem;
+  height: 3rem;
+  width: 90vw;
 }
 
-@media screen and (max-width: 45em) {
-  .nl-form {
-    font-size: 3em;
-    width: 100%;
-  }
+#application article .text label {
+  position: absolute;
+  color: white;
+  font-size: 0.8rem;
+  z-index: 10;
+  margin-top: 3rem;
+  padding: 0.2rem 0.5rem 0.2rem 0.5rem;
+  background-color: red;
+  border-top: 1px dashed white;
+  width: 90vw;
 }
 
-@media screen and (max-width: 25em) {
-  .nl-form {
-    font-size: 2em;
-    width: 100%;
-  }
+#application footer {
+  background: none;
+  padding: 1rem;
 }
