Fix button focus color

--- a/css/app.css
+++ b/css/app.css
@@ -28,6 +28,10 @@ button:hover, .button:hover {
   background-color: #E70000;
 }
 
+button:focus {
+  background-color: #E70000;
+}
+
 .bold {
   font-weight: bold;
 }
