--- a/css/application.css
+++ b/css/application.css
@@ -5,6 +5,38 @@
   background-color: #1C1C1C;
 }
 
+#application-views {
+  position: absolute;
+  width: 100vw;
+  height: 100vh;
+  left: 0;
+  overflow: scroll;
+}
+
+/* enter animation */
+#application-views.ng-enter {
+  -webkit-animation: fadeIn 0.2s both ease;
+  -moz-animation: fadeIn 0.2s both ease;
+  animation: fadeIn 0.2s both ease;
+}
+
+/* leave animation */
+#application-views.ng-leave {
+  -webkit-animation: fadeOut 0.2s both ease;
+  -moz-animation: fadeOut 0.2s both ease;
+  animation: fadeOut 0.2s both ease;
+}
+
+#application .page-indicator {
+  width: 100vw;
+  text-align: center;
+}
+
+#application .page-indicator i {
+  color: white;
+  font-size: 0.5rem;
+}
+
 #application form {
   width: 100vw;
   height: 100vh;
@@ -55,6 +87,7 @@
   text-align: center;
   text-transform: uppercase;
   padding: 1rem;
+  height: 4.5rem;
 }
 
 #application header h1 {
@@ -106,7 +139,7 @@
   font-family: 'Droid Serif';
   border: none;
   position: absolute;
-  top: 10rem;
+  top: 5rem;
   left: 5vw;
   font-size: 1.75rem;
   height: 3rem;
@@ -115,7 +148,7 @@
 
 #application article label {
   position: absolute;
-  top: 10rem;
+  top: 5rem;
   color: #CC0000;
   font-size: 0.8rem;
   z-index: 10;
@@ -131,7 +164,7 @@
   z-index: 10;
   position: absolute;
   background: #CC0000;
-  top: 10rem;
+  top: 5rem;
   height: 4.81rem;
   width: 22vw;
   right: 5vw;
@@ -156,7 +189,7 @@
   z-index: 10;
   background: red;
   position: absolute;
-  top: 10rem;
+  top: 5rem;
   left: 5vw;
   width: 90vw;
 }
@@ -170,6 +203,7 @@
   user-select: none;
   margin: 0;
   padding: 0.5rem 1rem 0.5rem 1rem;
+  cursor: pointer;
 }
 
 #application article .checkbox .item.checked {
@@ -189,16 +223,20 @@
 }
 
 #application article .checkbox label {
-  margin-top: 2.8rem;
+  position: relative;
+  top: 0rem;
   height: 2.5rem;
+  margin: 0;
   padding-top: 0.5rem;
 }
 
 #application article .checkbox button {
+  position: relative;
+  float: right;
   height: 2.5rem;
-  top: 10rem;
-  margin-top: 2.8rem;
   right: 0;
+  margin-top: -4rem;
+  top: 1.5rem;
   padding: 0;
 }
 
@@ -207,7 +245,7 @@
 }
 
 #application .agreements {
-  padding: 1rem 0 2rem 0;
+  padding: 1rem 0 1rem 0;
 }
 
 #application .agreements input[type="checkbox"] {
@@ -215,7 +253,6 @@
 }
 
 #application .agreements label {
-  margin-left: 0;
   font-size: 1rem;
   -webkit-touch-callout: none;
   -webkit-user-select: none;
@@ -224,7 +261,15 @@
   -ms-user-select: none;
   user-select: none;
   color: white;
-  margin-bottom: 0.5rem;
+  position: static;
+  display: block;
+  background: none;
+  border: none;
+  padding: 0;
+  margin: 0;
+  margin-bottom: 0.3rem;
+  height: auto;
+  top: 0;
 }
 
 #application .agreements input[type="checkbox"] + label::before {
