--- a/css/application.css
+++ b/css/application.css
@@ -44,13 +44,13 @@
   overflow: scroll
 }
 
-#application .blinds {
+.blinds {
   background-color: black;
   opacity: 0.8;
   z-index: 5;
   width: 100vw;
   height: 100vh;
-  position: absolute;
+  position: fixed;
   top: 0;
   right: 0;
 }
