--- a/css/app.css
+++ b/css/app.css
@@ -22,6 +22,7 @@ a:hover {
 
 button, .button {
   background-color: red;
+  font-family: 'Droid Serif';
 }
 
 button:hover, .button:hover {
@@ -179,6 +180,13 @@ fieldset legend {
   margin-top: 2rem;
 }
 
+button.apply {
+  width: 100%;
+  font-family: 'Oswald';
+  text-transform: uppercase;
+  font-size: 1.5rem;
+}
+
 #login {
   background: red;
   width: 90vw;
@@ -187,6 +195,17 @@ fieldset legend {
   top: 10rem;
   left: 5vw;
   padding: 1rem 0.75rem 0rem 0.75rem;
+}
+
+#login .switch {
+  position: absolute;
+  top: 1.8rem;
+  right: 1rem;
+  text-decoration: underline;
+}
+
+#login .switch {
+  color: white;
 }
 
 #login h2 {
@@ -339,7 +358,7 @@ footer#site-footer p {
   line-height: 4rem;
 }
 
-footer .container {
+footer#site-footer .container {
   width: 340px;
   margin: auto;
   float: none;
