Improve error handling on application pages

--- a/views/application/page2.html
+++ b/views/application/page2.html
@@ -40,6 +40,10 @@
     <ul>
       <li ng-repeat="e in application.errors">{{e}}</li>
     </ul>
+    <br>
+    <a class="white large" ui-sref="apply.page1">Page 1</a> <span class="large">|</span>
+    <a class="white large" ui-sref="apply.page2">Page 2</a> <span class="large">|</span>
+    <a class="white large" ui-sref="apply.page3">Page 3</a>
   </div>
   <button ui-sref="apply.page3"><span><i class="fa fa-arrow-right"></i></span> Next</button>
 </footer>
