--- a/views/application/page3.html
+++ b/views/application/page3.html
@@ -21,6 +21,10 @@
     <ul>
       <li ng-repeat="e in application.errors">{{e}}</li>
     </ul>
+    <br>
+    <a class="white large" ui-sref="apply.page1">Page 1</a> <span class="large">|</span>
+    <a class="white large" ui-sref="apply.page2">Page 2</a> <span class="large">|</span>
+    <a class="white large" ui-sref="apply.page3">Page 3</a>
   </div>
   <button><span><i class="fa fa-check"></i></span> Apply</button>
 </footer>
