Change text in about section

--- a/views/home.html
+++ b/views/home.html
@@ -95,7 +95,7 @@
         <div class="small-12 columns">
           <h3>ABOUT</h3>
           <p>
-            Kent Hack Enough brings hackers from all over the nation together to learn something new, party hard, and create something awesome. With more than 250 other highly motivated, creative, and talented participants, Kent Hack Enough is a weekend-long event where students from all areas of interest come together to make something awesome, like an app, website or hardware hack. The entire event is free for students, including food, energy drinks, and swag. In between all the coding, designing, and water pong, our sponsors are available as mentors to provide help and expertise throughout the hacking process.
+            Kent Hack Enough brings hackers from all over the nation together to learn something new, party hard, and create something awesome. With more than 250 highly motivated, creative, and talented participants, Kent Hack Enough is a weekend-long event where students from all areas of interest come together to make something awesome, like an app, website or hardware hack. The entire event is free for students, including food, energy drinks, and swag. In between all the coding, designing, and water pong, our sponsors are available as mentors to provide help and expertise throughout the hacking process.
           </p>
         </div>
       </div>
