--- a/views/home.html
+++ b/views/home.html
@@ -39,7 +39,10 @@
       </form>
       <button ng-if="home.mail.email == 'supersecret' && !home.user" class="apply" ng-click="home.loginRegister = true">Apply</button>
       <button ng-if="home.mail.email == 'supersecret' && home.user" class="apply" ui-sref="apply.page1">Your Application</button>
-      <div class="align-center"><a ng-if="home.mail.email == 'supersecret' && home.user" ng-click="home.person.logout()" class="white">Logout</a></div>
+      <div ng-if="home.mail.email == 'supersecret' && home.user" class="align-center">
+        <a href="/account" class="white">Change Password</a> |
+        <a ng-click="home.person.logout()" class="white">Logout</a>
+      </div>
     </div>
   </div>
 
